<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_guide"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.jzby.jzbysounderclient.GuideActivity">

    <LinearLayout
        android:id="@+id/ll_step_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_point" />

            <Spinner
                android:id="@+id/sp_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                   />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/btn_next"
            style="@style/my_button"
            android:enabled="false"
            android:text="@string/button_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_step_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/fruit" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_prev"
            style="@style/my_button"
            android:text="@string/button_prev" />

        <TextView
            android:id="@+id/btn_sounder_connect"
            style="@style/my_button"
            android:layout_marginTop="10dp"
            android:text="@string/button_connect" />

    </LinearLayout>

</LinearLayout>
