<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ai_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.jzby.jzbysounderclient.MainActivity">
    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="发现"
            android:textColor="@color/default_bg"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/icon_search" />

    </LinearLayout>
    <com.jzby.jzbysounderclient.view.MyViewPager
        android:id="@+id/vp_client"
        android:layout_width="match_parent"
        android:background="@color/default_bg"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/default_bg"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_menu_found"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_menu_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_found_unselected" />

            <TextView
                android:id="@+id/tv_menu_found"
                style="@style/menu_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_found" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menu_skill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_menu_skill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_skill_unselected" />

            <TextView
                android:id="@+id/tv_menu_skill"
                style="@style/menu_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_skill" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_player"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true">

            <com.jzby.jzbysounderclient.view.CircleImageView
                android:id="@+id/cv_player"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:padding="2dp"
                android:src="@drawable/fruit"
                app:civ_border_color="#ccc"
                app:civ_border_width="2dp" />

            <ImageView
                android:id="@+id/iv_player_cover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:src="@drawable/play" />

        </FrameLayout>


        <LinearLayout
            android:id="@+id/ll_menu_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_menu_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_fav_unselected" />

            <TextView
                android:id="@+id/tv_menu_favorite"
                style="@style/menu_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_favorite" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_menu_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_menu_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menu_me_unselected" />

            <TextView
                android:id="@+id/tv_menu_me"
                style="@style/menu_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_me" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
